terraform/cloudfoundry/cf_api_security_groups.tf
resource "aws_security_group" "cf_api_elb" {
  name        = "${var.env}-cf-api-elb"
  description = "Security group for CF API public endpoints that allows web traffic from whitelisted IPs"
  vpc_id      = "${var.vpc_id}"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  /* FIXME: Merge these two ingress block back together once */
  /* https://github.com/hashicorp/terraform/issues/5301 is resolved. */
  ingress {
    from_port = 443
    to_port   = 443
    protocol  = "tcp"

    # FIXME: Allow all to allow cloudfront.... MUST BE CHANGED
    cidr_blocks = [ "0.0.0.0/0" ]
  }

  ingress {
    from_port = 443
    to_port   = 443
    protocol  = "tcp"

    cidr_blocks = [
      "${formatlist("%s/32", aws_eip.cf.*.public_ip)}",
    ]
  }

  tags {
    Name = "${var.env}-cf-api"
  }
}
